# src/main/java/com/utochkin/kafkaproducerforsma/controllers/UserController.java
@@ -1,11 +1,13 @@
 package com.utochkin.kafkaproducerforsma.controllers;
 
 
+import com.utochkin.kafkaproducerforsma.dto.UserDto;
 import com.utochkin.kafkaproducerforsma.dto.response.ErrorResponse;
 import com.utochkin.kafkaproducerforsma.services.interfaces.UserService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -16,6 +18,7 @@ import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -26,7 +29,7 @@ public class UserController {
 
     private final UserService userService;
 
-    @PostMapping("/friendRequest")
+    @PostMapping("/createFriendRequest")
     @Operation(summary = "Отправка запроса <добавить в друзья>")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Friend request successful post", content = @Content(schema = @Schema(implementation = String.class),
@@ -34,13 +37,10 @@ public class UserController {
             @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
     })
-    public ResponseEntity<?> createFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdFrom", description = "ID пользователя отправляющего заявку <добавить в друзья>",
-            in = ParameterIn.QUERY, example = "1") Long userIdFrom,
-                                                 @NotNull @RequestParam @Parameter(name = "userIdTo", description = "ID пользователя, которому отправили заявку <добавить в друзья>",
+    public ResponseEntity<?> createFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdTo", description = "ID пользователя, которому отправляем заявку <добавить в друзья>",
                                                          in = ParameterIn.QUERY, example = "2") Long userIdTo) {
-        userService.createFriendRequest(userIdFrom, userIdTo);
-        return new ResponseEntity<>(String.format("User with id = %s send friend request to user with id = %s",
-                userIdFrom, userIdTo), HttpStatus.OK);
+        Long userIdFrom = userService.createFriendRequest(userIdTo);
+        return new ResponseEntity<>(String.format("User with id = %s send friend request to user with id = %s", userIdFrom, userIdTo), HttpStatus.OK);
     }
 
     @PostMapping("/acceptFriendRequest")
@@ -51,13 +51,10 @@ public class UserController {
             @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
     })
-    public ResponseEntity<?> acceptFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdFrom", description = "ID пользователя отправляющего заявку <добавить в друзья>",
-            in = ParameterIn.QUERY, example = "1") Long userIdFrom,
-                                                 @NotNull @RequestParam @Parameter(name = "userIdAccepted", description = "ID пользователя принимающего заявку <добавить в друзья>",
-                                                         in = ParameterIn.QUERY, example = "2") Long userIdAccepted) {
-        userService.acceptFriendRequest(userIdFrom, userIdAccepted);
-        return new ResponseEntity<>(String.format("User with id = %s accept friend request to user with id = %s",
-                userIdAccepted, userIdFrom), HttpStatus.OK);
+    public ResponseEntity<?> acceptFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdSendedRequest", description = "ID пользователя отправившего заявку <добавить в друзья>",
+            in = ParameterIn.QUERY, example = "1") Long userIdSendedRequest){
+        Long userIdAccepted = userService.acceptFriendRequest(userIdSendedRequest);
+        return new ResponseEntity<>(String.format("User with id = %s accept friend request to user with id = %s", userIdAccepted, userIdSendedRequest), HttpStatus.OK);
     }
 
     @PostMapping("/refuseFriendRequest")
@@ -68,13 +65,10 @@ public class UserController {
             @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
     })
-    public ResponseEntity<?> refuseFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdRefused", description = "ID пользователя отклонившего заявку <добавить в друзья>",
-            in = ParameterIn.QUERY, example = "2") Long userIdRefused,
-                                                 @NotNull @RequestParam @Parameter(name = "userIdFrom", description = "ID пользователя отправляющего заявку <добавить в друзья>",
-            in = ParameterIn.QUERY, example = "1") Long userIdFrom) {
-        userService.refuseFriendRequest(userIdRefused, userIdFrom);
-        return new ResponseEntity<>(String.format("User with id = %s refused friend request to user with id = %s",
-                userIdRefused, userIdFrom), HttpStatus.OK);
+    public ResponseEntity<?> refuseFriendRequest(@NotNull @RequestParam @Parameter(name = "userIdSendedRequest", description = "ID пользователя отправившего заявку <добавить в друзья>",
+            in = ParameterIn.QUERY, example = "1") Long userIdSendedRequest) {
+        Long userIdRefusedRequest = userService.refuseFriendRequest(userIdSendedRequest);
+        return new ResponseEntity<>(String.format("User with id = %s refused friend request to user with id = %s", userIdRefusedRequest, userIdSendedRequest), HttpStatus.OK);
     }
 
     @PostMapping("/refuseFollower")
@@ -85,13 +79,10 @@ public class UserController {
             @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
     })
-    public ResponseEntity<?> refuseFollower(@NotNull @RequestParam @Parameter(name = "userIdFollower", description = "ID пользователя, который отказывается от подписки на другого пользователя",
-            in = ParameterIn.QUERY, example = "1") Long userIdFollower,
-                                            @NotNull @RequestParam @Parameter(name = "userId", description = "ID пользователя, на которого подписан пользователь",
+    public ResponseEntity<?> refuseFollower(@NotNull @RequestParam @Parameter(name = "userId", description = "ID пользователя, на которого подписан пользователь",
                                                     in = ParameterIn.QUERY, example = "2") Long userId) {
-        userService.refuseFollower(userIdFollower, userId);
-        return new ResponseEntity<>(String.format("User with id = %s refused follower to user with id = %s",
-                userIdFollower, userId), HttpStatus.OK);
+        Long userIdRefused = userService.refuseFollower(userId);
+        return new ResponseEntity<>(String.format("User with id = %s refused follower to user with id = %s", userIdRefused, userId), HttpStatus.OK);
     }
 
     @DeleteMapping("/deleteFriend")
@@ -102,13 +93,55 @@ public class UserController {
             @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
     })
-    public ResponseEntity<?> deleteFriend(@NotNull @RequestParam @Parameter(name = "userId", description = "ID пользователя, который удаляет из друзей",
-            in = ParameterIn.QUERY, example = "1") Long userId,
-                                          @NotNull @RequestParam @Parameter(name = "userIdDeleted", description = "ID пользователя, которого удалили из друзей",
+    public ResponseEntity<?> deleteFriend(@NotNull @RequestParam @Parameter(name = "userIdDeleted", description = "ID пользователя, которого хотят удалить из друзей",
                                                   in = ParameterIn.QUERY, example = "2") Long userIdDeleted) {
-        userService.deleteFriend(userId, userIdDeleted);
-        return new ResponseEntity<>(String.format("User with id = %s delete friend with id = %s",
-                userId, userIdDeleted), HttpStatus.OK);
+        Long userId = userService.deleteFriend(userIdDeleted);
+        return new ResponseEntity<>(String.format("User with id = %s delete friend with id = %s", userId, userIdDeleted), HttpStatus.OK);
     }
 
+    @GetMapping("/getAllUsers")
+    @PreAuthorize("hasRole('ADMIN')")
+    @Operation(summary = "Получение всех пользователей из базы данных (Доступен только авторизованным пользователям с ролью ADMIN)")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successful get all users from BD", content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = UserDto.class)))),
+            @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
+            @ApiResponse(responseCode = "403", description = "Not forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
+    })
+    public ResponseEntity<?> getAllUsers() {
+        return new ResponseEntity<>(userService.getAllUsers(), HttpStatus.OK);
+    }
+
+    @GetMapping("/getIdUserByUsername")
+    @Operation(summary = "Получение id пользователя по его имени")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successful get id user", content = @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
+    })
+    public ResponseEntity<?> getIdUser(@NotNull @RequestParam @Parameter(name = "username", description = "Имя пользователя, по которому ищется userId",
+            in = ParameterIn.QUERY, example = "Sergey") String username) {
+         Long userId = userService.getIdUser(username);
+        return new ResponseEntity<>(String.format("User id = %s by username - %s", userId, username), HttpStatus.OK);
+    }
+
+    @GetMapping("/getAllUsersFriends")
+    @Operation(summary = "Получение всех друзей пользователя")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successful get all friends user", content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = UserDto.class)))),
+            @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
+            @ApiResponse(responseCode = "403", description = "Not forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
+    })
+    public ResponseEntity<?> getAllUsersFriends() {
+        return new ResponseEntity<>(userService.getAllUsersFriends(), HttpStatus.OK);
+    }
+
+    @GetMapping("/getAllUsersFollowers")
+    @Operation(summary = "Получение всех фолловеров пользователя")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successful get all followers user", content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = UserDto.class)))),
+            @ApiResponse(responseCode = "404", description = "Not found", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class))),
+            @ApiResponse(responseCode = "403", description = "Not forbidden", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorResponse.class)))
+    })
+    public ResponseEntity<?> getAllUsersFollowers() {
+        return new ResponseEntity<>(userService.getAllUsersFollowers(), HttpStatus.OK);
+    }
 }
